# statistical-kenpom

./: .gitignore  README.md  algorithms.md  bilinear_form.md  claude.md  kenpom_instructions.md  kenpom_methods_uncertainty.md  pyproject.toml
docs/: continuity_prior.md  model1_kenpom_fixed_point.md  model2_ridge_latent_effects.md  model3_bilinear_interaction.md  model4_kalman_state_space.md  models_overview.md
models/: __init__.py  base.py  data.py  eval.py  model1.py  model2.py  model2_continuity.py  model3.py  model4.py  priors.py
ncaa_scraper/: __init__.py  config.py  db.py  pipeline.py
ncaa_scraper/parsers/: boxscore.py  schedule.py  teams.py
ncaa_scraper/scrapers/: checkpoint.py  client.py
ncaa_scraper/scrapers/steps/: step1_teams.py  step2_schedules.py  step3_boxscores.py
notebooks/: probabilistic_ratings.ipynb  win_probability_calibration.ipynb
paper/: probabilistic_ratings.aux  probabilistic_ratings.out  probabilistic_ratings.tex
scripts/: eval_continuity_prior.py  eval_fix_a.py  model_osa_comparison.py  osa_four_model_comparison.py  recency_half_life_search.py  rolling_net_rtg_2026.py  rolling_one_step_ahead.py  scatter_model_comparison.py  uncertainty_viz.py  verify_graph_and_rts.py  win_prediction_comparison.py
tests/fixtures/: boxscore.html  schedule.html  teams.html
tests/integration/: test_model_validation.py  test_pipeline_live.py  test_predictive_eval.py
tests/unit/: test_boxscore_parser.py  test_continuity_prior.py  test_model4.py  test_models.py  test_schedule_parser.py  test_teams_parser.py
