[build-system]
requires = ["setuptools>=72"]
build-backend = "setuptools.backends.legacy:build"

# ── Rating models package ─────────────────────────────────────────────────────
# This is what colleagues install: pip install ncaa-ratings
# Only numpy + scipy required — no scraper, browser, or network deps.
[project]
name = "ncaa-ratings"
version = "0.2.0"
description = "Probabilistic NCAA team efficiency ratings with exact Bayesian posteriors"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
]

[project.optional-dependencies]
# Data pipeline — only needed when collecting / refreshing ncaa.db
scraper = [
    "beautifulsoup4==4.14.3",
    "curl-cffi==0.15.0",
    "lxml==6.0.2",
    "tenacity==9.1.4",
]
dev = [
    "pytest==8.3.5",
    "pytest-mock==3.14.0",
]

[project.scripts]
ncaa-pipeline = "ncaa_scraper.pipeline:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ncaa_scraper*", "models*"]

# ── Test configuration ────────────────────────────────────────────────────────
[tool.pytest.ini_options]
markers = [
    "integration: makes real HTTP requests — run with: pytest -m integration",
]
addopts = "-m 'not integration'"
testpaths = ["tests"]
